Add filter for license intros to reduce unknowns
Adds a filter for unstructured debian copyright file, where if
license intros are perfectly matched, they are discarded, as
in the context of a debian copyright file, the license texts/notices
are also there and not just the intro.

Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
@@ -1,20 +1,18 @@
 -
-- gpl-3.0-plus AND gpl-3.0-plus WITH gcc-exception-3.1 AND unknown-license-reference AND bsd-new
-  AND unknown-license-reference AND uoi-ncsa AND mit AND unknown-license-reference AND (mit
-  OR commercial-license) AND gfdl-1.2 AND gcc-exception-3.1 AND gpl-2.0 AND lgpl-2.0-plus AND
-  lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.1-plus AND public-domain AND lgpl-2.1-plus AND
-  lgpl-2.1-plus AND sunpro AND bsd-new AND gpl-2.0-plus AND (artistic-perl-1.0 OR gpl-1.0) AND
-  zlib AND d-zlib AND unknown-license-reference AND mit AND unknown-license-reference AND gpl-3.0-plus
-  WITH gcc-exception-3.1 AND gpl-3.0-plus AND gfdl-1.3-plus AND lgpl-2.1-plus AND gpl-3.0 AND
-  gcc-exception-3.1 AND gpl-3.0-plus AND gcc-exception-3.1 AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0)
-  AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0) AND (lgpl-2.0 AND gpl-3.0) AND gpl-3.0-plus AND gpl-1.0-plus
-  AND (gpl-3.0 AND lgpl-2.1) AND (gpl-2.0-plus AND gpl-3.0-plus) AND lgpl-2.1-plus AND gpl-3.0
-  AND gcc-exception-3.1 AND unknown-license-reference AND (lgpl-2.0-plus AND gpl-1.0-plus) AND
-  bsla-no-advert AND bsla AND bsd-original-uc AND bsd-new AND unknown-license-reference AND
-  bsd-original-uc AND flex-2.5 AND bsd-original-uc AND (gpl-3.0 AND gpl-2.0 AND lgpl-3.0-plus
-  WITH cygwin-exception-lgpl-3.0-plus AND other-copyleft AND other-permissive) AND x11-lucent
-  AND amd-historical AND sunpro AND osf-1990 AND nilsson-historical AND newlib-historical AND
-  bsd-new AND amd-historical AND bsd-new AND bsd-simplified AND bsd-simplified AND bsd-simplified
+- gpl-3.0-plus AND gpl-3.0-plus WITH gcc-exception-3.1 AND bsd-new AND uoi-ncsa AND mit AND
+  (mit OR commercial-license) AND gfdl-1.2 AND gcc-exception-3.1 AND gpl-2.0 AND lgpl-2.0-plus
+  AND lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.1-plus AND public-domain AND lgpl-2.1-plus
+  AND lgpl-2.1-plus AND sunpro AND bsd-new AND gpl-2.0-plus AND (artistic-perl-1.0 OR gpl-1.0)
+  AND zlib AND d-zlib AND mit AND gpl-3.0-plus WITH gcc-exception-3.1 AND gpl-3.0-plus AND gfdl-1.3-plus
+  AND lgpl-2.1-plus AND gpl-3.0 AND gcc-exception-3.1 AND gpl-3.0-plus AND gcc-exception-3.1
+  AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0) AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0) AND (lgpl-2.0
+  AND gpl-3.0) AND gpl-3.0-plus AND gpl-1.0-plus AND (gpl-3.0 AND lgpl-2.1) AND (gpl-2.0-plus
+  AND gpl-3.0-plus) AND lgpl-2.1-plus AND gpl-3.0 AND gcc-exception-3.1 AND unknown-license-reference
+  AND (lgpl-2.0-plus AND gpl-1.0-plus) AND bsla-no-advert AND bsla AND bsd-original-uc AND bsd-new
+  AND unknown-license-reference AND bsd-original-uc AND flex-2.5 AND bsd-original-uc AND (gpl-3.0
+  AND gpl-2.0 AND lgpl-3.0-plus WITH cygwin-exception-lgpl-3.0-plus AND other-copyleft AND other-permissive)
+  AND x11-lucent AND amd-historical AND sunpro AND osf-1990 AND nilsson-historical AND newlib-historical
+  AND bsd-new AND amd-historical AND bsd-new AND bsd-simplified AND bsd-simplified AND bsd-simplified
   AND x11-hanson AND bsd-simplified AND bsd-new AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.0-plus
   AND lgpl-2.0-plus AND intel-osl-1993 AND osf-1990 AND hs-regexp AND bsd-simplified AND bsd-simplified
   AND bsd-simplified AND bsd-new AND unicode AND unicode AND lgpl-2.1-plus
