--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-qcom-media.copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-qcom-media.copyright.expected.yml
@@ -1,5 +1,5 @@
 -
-- unknown-license-reference AND free-unknown AND proprietary-license AND openssl-ssleay AND
+- free-unknown AND proprietary-license AND unknown-license-reference AND openssl-ssleay AND
   zlib AND public-domain AND bsd-new AND gary-s-brown AND other-permissive AND isc AND bsd-unmodified
   AND (gpl-2.0 OR bsd-new) AND bsd-original
 - |
