--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-9-base/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-9-base/copyright.expected.yml
@@ -1,11 +1,11 @@
 -
-- gpl-3.0-plus AND gpl-3.0-plus WITH gcc-exception-3.1 AND unknown-license-reference AND bsd-new
-  AND uoi-ncsa AND mit AND (mit OR commercial-license) AND gfdl-1.2 AND gcc-exception-3.1 AND
-  gpl-2.0 AND lgpl-2.0-plus AND lgpl-2.1-plus AND public-domain AND sunpro AND gpl-2.0-plus
-  AND (artistic-perl-1.0 OR gpl-1.0) AND zlib AND d-zlib AND gfdl-1.3-plus AND (gpl-3.0 AND
-  lgpl-2.1) AND lgpl-2.1 AND (lgpl-3.0 AND gpl-3.0) AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0)
-  AND (lgpl-2.0 AND gpl-3.0) AND gpl-1.0-plus AND (gpl-2.0-plus AND gpl-3.0-plus) AND (lgpl-2.1
-  AND lgpl-3.0 AND gpl-3.0) AND (lgpl-2.1 AND lgpl-3.0) AND (lgpl-2.0-plus AND gpl-1.0-plus)
+- gpl-3.0-plus AND gpl-3.0-plus WITH gcc-exception-3.1 AND bsd-new AND uoi-ncsa AND mit AND
+  (mit OR commercial-license) AND gfdl-1.2 AND gcc-exception-3.1 AND gpl-2.0 AND lgpl-2.0-plus
+  AND lgpl-2.1-plus AND public-domain AND sunpro AND gpl-2.0-plus AND (artistic-perl-1.0 OR
+  gpl-1.0) AND zlib AND d-zlib AND gfdl-1.3-plus AND (gpl-3.0 AND lgpl-2.1) AND lgpl-2.1 AND
+  (lgpl-3.0 AND gpl-3.0) AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0) AND (lgpl-2.0 AND gpl-3.0)
+  AND gpl-1.0-plus AND (gpl-2.0-plus AND gpl-3.0-plus) AND (lgpl-2.1 AND lgpl-3.0 AND gpl-3.0)
+  AND (lgpl-2.1 AND lgpl-3.0) AND unknown-license-reference AND (lgpl-2.0-plus AND gpl-1.0-plus)
   AND bsla-no-advert AND bsla AND bsd-original-uc AND flex-2.5 AND (gpl-3.0 AND gpl-2.0 AND
   lgpl-3.0-plus WITH cygwin-exception-lgpl-3.0-plus AND other-copyleft AND other-permissive)
   AND x11-lucent AND amd-historical AND osf-1990 AND nilsson-historical AND newlib-historical
