--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libc6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libc6/copyright-detailed.expected.yml
@@ -1,9 +1,8 @@
 -
-- lgpl-2.1-plus AND gpl-2.0-plus AND bsd-new AND bsd-new AND unknown-license-reference AND historical
-  AND unknown-license-reference AND isc AND unknown-license-reference AND bsd-new AND carnegie-mellon-contributors
-  AND bsd-new AND bsd-new AND bsd-new AND inner-net-2.0 AND lgpl-2.1-plus AND lgpl-2.1-plus
-  AND lgpl-2.0-plus AND other-permissive AND ietf AND bsd-new AND other-permissive AND hs-regexp
-  AND pcre AND sunpro AND other-permissive AND lgpl-2.1-plus
+- lgpl-2.1-plus AND gpl-2.0-plus AND bsd-new AND bsd-new AND historical AND isc AND bsd-new
+  AND carnegie-mellon-contributors AND bsd-new AND bsd-new AND bsd-new AND inner-net-2.0 AND
+  lgpl-2.1-plus AND lgpl-2.1-plus AND lgpl-2.0-plus AND other-permissive AND ietf AND bsd-new
+  AND other-permissive AND hs-regexp AND pcre AND sunpro AND other-permissive AND lgpl-2.1-plus
 - |
   Copyright (c) 1991-2015 Free Software Foundation, Inc.
   Copyright (c) 1991-2015 Free Software Foundation, Inc.
