--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgnutls30/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libgnutls30/copyright.expected.yml
@@ -1,8 +1,8 @@
 -
 - (lgpl-2.1-plus AND gpl-3.0-plus AND (lgpl-3.0-plus AND gpl-2.0-plus)) AND lgpl-2.1-plus AND
-  gpl-3.0-plus AND unknown-license-reference AND gfdl-1.1-plus AND gfdl-1.3-plus AND (lgpl-2.0-plus
-  AND lgpl-3.0 AND gpl-1.0-plus AND gpl-3.0 AND gfdl-1.3) AND lgpl-3.0-plus AND gpl-2.0-plus
-  AND lgpl-2.0-plus AND gpl-3.0 AND (bsd-new OR gpl-1.0-plus) AND bsd-simplified AND public-domain
+  gpl-3.0-plus AND gfdl-1.1-plus AND gfdl-1.3-plus AND (lgpl-2.0-plus AND lgpl-3.0 AND gpl-1.0-plus
+  AND gpl-3.0 AND gfdl-1.3) AND lgpl-3.0-plus AND gpl-2.0-plus AND lgpl-2.0-plus AND gpl-3.0
+  AND unknown-license-reference AND (bsd-new OR gpl-1.0-plus) AND bsd-simplified AND public-domain
   AND isc AND cc0-1.0 AND mit AND apache-2.0 AND (lgpl-3.0-plus AND gpl-2.0-plus) AND (lgpl-3.0-plus
   OR gpl-2.0-plus) AND bsd-new
 - |
