Use correct pytest setting for markers
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -234,6 +234,6 @@ python_functions=test
 
 addopts =
     -rfExXw
-    --strict
+    --strict-markers
     --ignore setup.py
     --doctest-modules
