--- a/setup.cfg
+++ b/setup.cfg
@@ -235,6 +235,6 @@ python_functions=test
 
 addopts =
     -rfExXw
-    --strict
+    --strict-markers
     --ignore setup.py
     --doctest-modules
