--- a/src/licensedcode/data/licenses/unknown-license-reference.yml
+++ b/src/licensedcode/data/licenses/unknown-license-reference.yml
@@ -3,6 +3,7 @@ short_name: Unknown License reference
 name: Unknown License file reference
 category: Unstated License
 owner: Unspecified
+is_unknown: yes
 notes: This is reference to a license file with no clear license. this was known before as "see-license"
     and "license-file-reference"
 spdx_license_key: LicenseRef-scancode-unknown-license-reference
