--- a/src/licensedcode/data/licenses/unknown-spdx.yml
+++ b/src/licensedcode/data/licenses/unknown-spdx.yml
@@ -3,6 +3,7 @@ short_name: unknown SPDX
 name: Unknown SPDX license detected but not recognized
 category: Unstated License
 owner: Unspecified
+is_unknown: yes
 spdx_license_key: LicenseRef-scancode-unknown-spdx
 notes: This is something that clearly ressembles a license in an SPDX license
  expression but is not conclusively an SPDX license ID.
