--- a/src/licensedcode/data/licenses/unknown.yml
+++ b/src/licensedcode/data/licenses/unknown.yml
@@ -3,5 +3,6 @@ short_name: unknown
 name: Unknown license detected but not recognized
 category: Unstated License
 owner: Unspecified
+is_unknown: yes
 spdx_license_key: LicenseRef-scancode-unknown
 notes: This is something that clearly ressembles a license but is not conclusive.
