--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
@@ -7,15 +7,15 @@
   AND lgpl-2.1-plus AND gpl-3.0 AND gcc-exception-3.1 AND gpl-3.0-plus AND gcc-exception-3.1
   AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0) AND (gpl-3.0 AND lgpl-2.1 AND lgpl-3.0) AND (lgpl-2.0
   AND gpl-3.0) AND gpl-3.0-plus AND gpl-1.0-plus AND (gpl-3.0 AND lgpl-2.1) AND (gpl-2.0-plus
-  AND gpl-3.0-plus) AND lgpl-2.1-plus AND gpl-3.0 AND gcc-exception-3.1 AND unknown-license-reference
-  AND (lgpl-2.0-plus AND gpl-1.0-plus) AND bsla-no-advert AND bsla AND bsd-original-uc AND bsd-new
-  AND unknown-license-reference AND bsd-original-uc AND flex-2.5 AND bsd-original-uc AND (gpl-3.0
-  AND gpl-2.0 AND lgpl-3.0-plus WITH cygwin-exception-lgpl-3.0-plus AND other-copyleft AND other-permissive)
-  AND x11-lucent AND amd-historical AND sunpro AND osf-1990 AND nilsson-historical AND newlib-historical
-  AND bsd-new AND amd-historical AND bsd-new AND bsd-simplified AND bsd-simplified AND bsd-simplified
-  AND x11-hanson AND bsd-simplified AND bsd-new AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.0-plus
-  AND lgpl-2.0-plus AND intel-osl-1993 AND osf-1990 AND hs-regexp AND bsd-simplified AND bsd-simplified
-  AND bsd-simplified AND bsd-new AND unicode AND unicode AND lgpl-2.1-plus
+  AND gpl-3.0-plus) AND lgpl-2.1-plus AND gpl-3.0 AND gcc-exception-3.1 AND (lgpl-2.0-plus AND
+  gpl-1.0-plus) AND bsla-no-advert AND bsla AND bsd-original-uc AND bsd-new AND bsd-original-uc
+  AND flex-2.5 AND bsd-original-uc AND (gpl-3.0 AND gpl-2.0 AND lgpl-3.0-plus WITH cygwin-exception-lgpl-3.0-plus
+  AND other-copyleft AND other-permissive) AND x11-lucent AND amd-historical AND sunpro AND
+  osf-1990 AND nilsson-historical AND newlib-historical AND bsd-new AND amd-historical AND bsd-new
+  AND bsd-simplified AND bsd-simplified AND bsd-simplified AND x11-hanson AND bsd-simplified
+  AND bsd-new AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.0-plus AND lgpl-2.0-plus AND intel-osl-1993
+  AND osf-1990 AND hs-regexp AND bsd-simplified AND bsd-simplified AND bsd-simplified AND bsd-new
+  AND unicode AND unicode AND lgpl-2.1-plus
 - |
   Copyright (c) 1986, 1987, 1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019
   Copyright (c) 2009-2019 by the LLVM contributors
