--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libk5crypto3/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libk5crypto3/copyright-detailed.expected.yml
@@ -1,15 +1,13 @@
 -
 - bsd-simplified AND generic-export-compliance AND cc-by-sa-3.0 AND proprietary-license AND
   other-permissive AND mit-no-advert-export-control AND brian-gladman-3-clause AND bsd-new AND
-  unknown-license-reference AND mit AND unknown-license-reference AND bsd-2-clause-views AND
-  mit AND unknown-license-reference AND bsd-new AND bsd-new AND michigan-disclaimer AND unknown-license-reference
-  AND fsf-unlimited-no-warranty AND unknown-license-reference AND mit-no-advert-export-control
-  AND openldap-2.8 AND bsd-new AND bsd-new AND bsd-new AND freebsd-doc AND cmu-uc AND nrl-permission
-  AND ietf-trust AND mit-old-style AND mit AND bsd-simplified AND (mit-no-advert-export-control
-  AND proprietary-license) AND bsd-original-uc AND mit-no-advert-export-control AND bsd-original
-  AND mit AND isc AND isc AND other-permissive AND bsd-new AND rsa-md4 AND rsa-md5 AND rsa-1990
-  AND mit-with-modification-obligations AND unknown-license-reference AND bsd-new AND unknown-license-reference
-  AND (bsd-simplified OR gpl-2.0-plus) AND bsd-new AND bsd-simplified
+  mit AND bsd-2-clause-views AND mit AND bsd-new AND bsd-new AND michigan-disclaimer AND fsf-unlimited-no-warranty
+  AND mit-no-advert-export-control AND openldap-2.8 AND bsd-new AND bsd-new AND bsd-new AND
+  freebsd-doc AND cmu-uc AND nrl-permission AND ietf-trust AND mit-old-style AND mit AND bsd-simplified
+  AND (mit-no-advert-export-control AND proprietary-license) AND bsd-original-uc AND mit-no-advert-export-control
+  AND bsd-original AND mit AND isc AND isc AND other-permissive AND bsd-new AND rsa-md4 AND
+  rsa-md5 AND rsa-1990 AND mit-with-modification-obligations AND bsd-new AND (bsd-simplified
+  OR gpl-2.0-plus) AND bsd-new AND bsd-simplified
 - |
   Copyright (c) 1985-2018 by the Massachusetts Institute of Technology
   copyright MIT, Cygnus Support, Novell, OpenVision Technologies, Oracle, Red Hat, Sun Microsystems, FundsXpress, and others
