--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/ghostscript/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/ghostscript/stable_copyright-detailed.expected.yml
@@ -61,7 +61,7 @@
   fsf-free AND gpl-2.0-plus AND gpl-1.0-plus AND gpl-2.0-plus AND zlib AND bsd-new AND bsd-new
   AND sunsoft AND mit AND ((lgpl-2.1 AND public-domain) AND public-domain) AND apache-2.0 AND
   apache-2.0 AND agpl-3+ AND isc AND gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0-plus AND gpl-2.0-plus
-  AND gpl-2.0-plus AND gpl-2.0-plus AND other-permissive AND x11-opengroup AND unknown-license-reference
+  AND gpl-2.0-plus AND gpl-2.0-plus AND other-permissive AND x11-opengroup AND public-domain
   AND gpl-1.0-plus AND x11-lucent AND libpbm AND zlib AND gpl-3.0-plus AND gpl-1.0-plus
 - |
   1986, Eric Gisin
