--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-ti-connectivity.copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-ti-connectivity.copyright-detailed.expected.yml
@@ -1,3 +1,3 @@
 - - Binary redistribution (wl1251)
-- unknown-license-reference AND bsd-source-code AND bsd-source-code
+- proprietary-license
 - 2000-2016, Texas Instruments Incorporated
