--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/r/raspi3-firmware/stable_copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/r/raspi3-firmware/stable_copyright.expected.yml
@@ -1,6 +1,6 @@
 - - Proprietary_1
   - Proprietary_2
-- bsd-new AND (broadcom-proprietary AND broadcom-proprietary)
+- bsd-new AND broadcom-proprietary
 - |
   2006, Broadcom Corporation
   2015, Raspberry Pi (Trading) Ltd
