--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libacl1/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libacl1/copyright-detailed.expected.yml
@@ -1,8 +1,9 @@
 - gpl-2.0-plus AND gpl-1.0-plus AND gpl-2.0
 - - GPL-2+
   - LGPL-2+
-- (gpl-2.0-plus AND gpl-2.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-2.0) AND (lgpl-2.0-plus
-  AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.1)
+- (gpl-2.0-plus AND gpl-2.0-plus AND gpl-1.0-plus AND gpl-1.0-plus AND gpl-2.0) AND (gpl-1.0-plus
+  AND gpl-2.0) AND (lgpl-2.0-plus AND lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.1) AND (lgpl-2.1-plus
+  AND lgpl-2.1)
 - |
   Copyright © 2000-2008 Silicon Graphics, Inc.
   Copyright © 1999-2001,2007-2009 Andreas Gruenbacher
