--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libhogweed6/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libhogweed6/copyright.expected.yml
@@ -8,9 +8,10 @@
   - GPL-2
   - GAP
   - LGPL-3+
-- (lgpl-3.0-plus OR gpl-2.0-plus) AND (lgpl-2.0-plus AND gpl-2.0-plus AND lgpl-2.0) AND mit
-  AND (gpl-3.0-plus AND gpl-3.0-plus WITH tex-exception) AND gpl-2.0-plus AND autoconf-simple-exception-2.0
-  AND gpl-2.0 AND fsf-ap
+- (lgpl-3.0-plus OR gpl-2.0-plus) AND ((lgpl-3.0-plus OR gpl-2.0-plus) AND (other-permissive
+  AND public-domain) AND public-domain AND lgpl-2.0-plus AND mit) AND (lgpl-2.0-plus AND gpl-2.0-plus
+  AND lgpl-2.0) AND mit AND (gpl-3.0-plus AND gpl-3.0-plus WITH tex-exception) AND gpl-2.0-plus
+  AND autoconf-simple-exception-2.0 AND gpl-2.0 AND fsf-ap
 - |
   © 2001-2020 Niels Möller
   Some parts are Copyright © the Free Software Foundation and various
