--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/asterisk/stable_copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/a/asterisk/stable_copyright.expected.yml
@@ -26,11 +26,12 @@
   - Expat~disclaimer
   - Expat
   - WOL
-- gpl-2.0 AND fsf-free AND autoconf-simple-exception-2.0 AND mit-old-style-no-advert AND none
-  AND bsd-original-uc AND tu-berlin AND bsd-new AND bsd-original AND gpl-2.0-plus AND public-domain
-  AND other-permissive AND (mit AND gpl-2.0) AND (bsd-original-uc AND isc AND gpl-2.0) AND bison-exception-2.2
-  AND (wol AND gpl-2.0) AND (lgpl-2.1 OR gpl-2.0) AND isc AND brian-clapper AND lgpl-2.1 AND
-  mit-0
+- gpl-2.0 AND gpl-3.0 AND fsf-free AND autoconf-simple-exception-2.0 AND gpl-2.0-plus AND mit-old-style-no-advert
+  AND gpl-1.0-plus AND none AND bsd-original-uc AND free-unknown AND tu-berlin
+  AND bsd-new AND bsd-original AND public-domain AND (gpl-1.0-plus AND lgpl-2.0-plus) AND other-permissive
+  AND (mit AND gpl-2.0) AND (bsd-original-uc AND isc AND gpl-2.0) AND bison-exception-2.2 AND
+  gpl-3.0-plus AND (wol AND gpl-2.0) AND (lgpl-2.1 OR gpl-2.0) AND lgpl-2.0-plus AND (gpl-3.0
+  AND lgpl-2.0-plus) AND isc AND brian-clapper AND lgpl-2.1 AND mit-0 AND mit
 - |
   1999-2006, Brett Bryant <bbryant@digium.com>
   1999-2006, Mark Spencer <markster@digium.com>
