--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/golang-1.11/stable_copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/golang-1.11/stable_copyright.expected.yml
@@ -8,8 +8,8 @@
   - BSD-2-clause-svgpan
   - CC-BY-3.0
   - BSD-3-clause
-- (bsd-new AND google-patent-license-golang) AND mit AND bsd-simplified AND mpeg-ssg AND multics
-  AND apache-2.0 AND bsd-2-clause-views AND cc-by-3.0 AND bsd-new
+- (bsd-new AND google-patent-license-golang) AND mit AND bsd-simplified AND sunpro AND mpeg-ssg
+  AND multics AND apache-2.0 AND bsd-2-clause-views AND cc-by-3.0 AND bsd-new
 - |
   © 2009, 2010, The Go Authors. All rights reserved.
   © 1994-1999 Lucent Technologies Inc. All rights reserved.
