--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/m/mariadb-10.3/stable_copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/m/mariadb-10.3/stable_copyright.expected.yml
@@ -18,12 +18,12 @@
   - GPL-3+
   - MIT/X11
   - Artistic
-- (gpl-2.0 AND gpl-1.0-plus) AND (gpl-2.0-plus AND gpl-2.0 AND gpl-1.0-plus) AND other-copyleft
-  AND public-domain AND bsd-new AND (lgpl-2.1-plus AND lgpl-2.1) AND bsd-simplified AND (lgpl-2.0
-  AND lgpl-3.0-plus) AND fsf-free AND lgpl-2.0-plus AND ((gpl-2.0 AND gpl-1.0-plus) AND bsd-simplified)
-  AND zlib AND gpl-3.0-plus WITH bison-exception-2.2 AND gpl-2.0-plus WITH bison-exception-2.2
-  AND stlport-4.5 AND ((gpl-2.0 AND gpl-1.0-plus) OR (artistic-2.0 AND artistic-perl-1.0)) AND
-  gpl-3.0-plus AND (x11-xconsortium AND public-domain)
+- (gpl-2.0 AND gpl-1.0-plus) AND (gpl-2.0-plus AND gpl-2.0 AND gpl-1.0-plus) AND gpl-2.0 AND
+  other-copyleft AND public-domain AND bsd-new AND (lgpl-2.1-plus AND lgpl-2.1) AND bsd-simplified
+  AND (lgpl-2.0 AND lgpl-3.0-plus) AND fsf-free AND lgpl-2.0-plus AND ((gpl-2.0 AND gpl-1.0-plus)
+  AND bsd-simplified) AND zlib AND gpl-3.0-plus WITH bison-exception-2.2 AND gpl-2.0-plus WITH
+  bison-exception-2.2 AND stlport-4.5 AND ((gpl-2.0 AND gpl-1.0-plus) OR (artistic-2.0 AND artistic-perl-1.0))
+  AND gpl-3.0-plus AND (x11-xconsortium AND public-domain)
 - |
   2000-2016, Oracle and/or its affiliates. All rights reserved.
   2008-2013 Monty Program AB
