--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/python-django/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/p/python-django/stable_copyright-detailed.expected.yml
@@ -21,7 +21,7 @@
   - BSD-3-Clause
 - bsd-new AND bsd-new AND (apache-2.0 AND apache-2.0 AND apache-2.0) AND mit AND bsd-simplified
   AND bsd-new AND bsd-new AND psf-2.0 AND (apache-2.0 AND apache-2.0 AND apache-2.0) AND mit
-  AND mit AND (bsd-new AND mit) AND bsd-new AND bsd-new AND mit
+  AND mit AND (bsd-new AND mit) AND bsd-new AND bsd-new AND bsd-new AND mit
 - |
   Django Software Foundation and individual contributors
   2006-2008 Brett Parker <iDunno@sommitrealweird.co.uk>,
