--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/dash/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/dash/copyright-detailed.expected.yml
@@ -33,8 +33,8 @@
 - bsd-new AND fsf-unlimited-no-warranty AND fsf-unlimited-no-warranty AND fsf-free AND bsd-new
   AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new
   AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND bsd-new AND (x11-xconsortium
-  AND public-domain) AND ((gpl-2.0-plus AND gpl-2.0-plus) OR bsd-new) AND public-domain AND
-  bsd-new AND fsf-unlimited-no-warranty AND (gpl-2.0-plus AND gpl-2.0-plus)
+  AND public-domain) AND ((gpl-2.0-plus AND gpl-2.0-plus) OR bsd-new) AND public-domain
+  AND bsd-new AND fsf-unlimited-no-warranty AND (gpl-2.0-plus AND gpl-2.0-plus)
 - |
   1989-1994 The Regents of the University of California. All rights reserved.
   1997 Christos Zoulas. All rights reserved.
