--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libattr1/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libattr1/copyright.expected.yml
@@ -1,7 +1,8 @@
 - gpl-2.0-plus AND gpl-1.0-plus AND gpl-2.0
 - - GPL-2+
   - LGPL-2+
-- (gpl-2.0-plus AND gpl-1.0-plus AND gpl-2.0) AND (lgpl-2.0-plus AND lgpl-2.1-plus AND lgpl-2.1)
+- (gpl-2.0-plus AND gpl-1.0-plus AND gpl-2.0) AND (gpl-1.0-plus AND gpl-2.0) AND (lgpl-2.0-plus
+  AND lgpl-2.1-plus AND lgpl-2.1) AND (lgpl-2.1-plus AND lgpl-2.1)
 - |
   Copyright © 2000-2007 Silicon Graphics, Inc.
   Copyright © 2001-2003,2006-2007,2009 Andreas Gruenbacher
