--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libp11-kit0/copyright.expected.yml
@@ -4,7 +4,7 @@
   - ISC
   - ISC+IBM
   - same-as-rest-of-p11kit
-- bsd-new AND fsf-unlimited-no-warranty AND isc AND (isc AND ibm-dhcp) AND free-unknown
+- bsd-new AND fsf-unlimited-no-warranty AND mit AND isc AND (isc AND ibm-dhcp) AND free-unknown
 - |
   2011 Collabora Ltd.
   2004, 2005, 2007, 2008, 2012, 2013 Stefan Walter
