--- a/tests/formattedcode/data/yaml/tree/expected.yaml
+++ b/tests/formattedcode/data/yaml/tree/expected.yaml
@@ -39,7 +39,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
@@ -74,7 +76,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
@@ -109,7 +113,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
@@ -144,7 +150,9 @@ files:
     is_source: no
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights: []
     holders: []
@@ -173,7 +181,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
@@ -208,7 +218,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
@@ -243,7 +255,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
@@ -278,7 +292,9 @@ files:
     is_source: yes
     is_script: no
     licenses: []
+    unknown_licenses: []
     license_expressions: []
+    unknown_license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
       - value: Copyright (c) 2000 ACME, Inc.
