--- a/tests/cluecode/data/copyrights/no_holder_java-java.java.yml
+++ b/tests/cluecode/data/copyrights/no_holder_java-java.java.yml
@@ -3,4 +3,10 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright (c) 2005
+  - Copyright (c) 2005 Company
+holders:
+  - Company
+holders_summary:
+  - value: Company
+    count: 1
+
