Detect as unicode in copyrights
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/copyrights/transcode_doc-transcode_doc.copyright.yml
+++ b/tests/cluecode/data/copyrights/transcode_doc-transcode_doc.copyright.yml
@@ -9,3 +9,5 @@ holders:
 holders_summary:
   - value: Thomas Ostreich
     count: 1
+# the O in Ostreich is an Unicode Ö LATIN CAPITAL LETTER O WITH DIAERESIS 
+# Hex code point 00D6
