--- a/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
+++ b/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
@@ -2,4 +2,4 @@ what:
   - copyrights
 copyrights:
   - (c) 2004-2009 http://www.pudn.com/' color red' pudn.com
-notes: this is a corner and rare case that's not perfectfor now.
+# this is a corner and rare case that's not perfectly detected for now.
