--- a/src/licensedcode/data/licenses/nvidia-cuda-supplement-2020.yml
+++ b/src/licensedcode/data/licenses/nvidia-cuda-supplement-2020.yml
@@ -32,6 +32,7 @@ ignorable_authors:
     - Davide Barbieri
     - IMPACT Group, University of Illinois, http://impact.crhc.illinois.edu
     - Jonathan Hogg
+    - LLVM Team
     - Li-Wen Chang
     - Mutsuo Saito and Makoto Matsumoto
     - Norbert Juffa
