--- a/src/licensedcode/data/licenses/fraunhofer-iso-14496-10.yml
+++ b/src/licensedcode/data/licenses/fraunhofer-iso-14496-10.yml
@@ -5,6 +5,8 @@ category: Permissive
 owner: Fraunhofer-Gesellschaft
 spdx_license_key: LicenseRef-scancode-fraunhofer-iso-14496-10
 minimum_coverage: 60
+ignorable_authors:
+    - Heiko Schwarz
 ignorable_copyrights:
     - Copyright (c) ISO/IEC 2005
     - Copyright 2005, International Telecommunications Union, Geneva
