--- a/src/licensedcode/data/rules/mpl-1.1_or_gpl-2.0-plus_or_lgpl-2.1-plus_19.yml
+++ b/src/licensedcode/data/rules/mpl-1.1_or_gpl-2.0-plus_or_lgpl-2.1-plus_19.yml
@@ -2,7 +2,7 @@ license_expression: mpl-1.1 OR gpl-2.0-plus OR lgpl-2.1-plus
 is_license_notice: yes
 relevance: 100
 ignorable_copyrights:
-    - Copyright // the Initial Developer
+    - Copyright the Initial Developer
 ignorable_holders:
     - the Initial Developer
 ignorable_authors:
