Use bsd-new is rather bsd-simplified
This notice is vague and matches references to bsd-new or
bsd-simplified when seen in the wild. Therefore we lower the relevance
and reference bsd-new which covers also bsd-simplified.

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/rules/bsd-new_or_gpl-2.0_30.yml
+++ b/src/licensedcode/data/rules/bsd-new_or_gpl-2.0_30.yml
@@ -5,3 +5,5 @@ notes: this is also rarely seen with the bsd-simplified license, hence the lower
 referenced_filenames:
     - LICENSE
     - COPYING
+notes: this is used sometimes with a bsd-new and sometimes with a 
+ bsd-simplified and is both long enough and vaguely defined
