Add regipy and packagedcode-msitools as deps #2565
    * Add cli tests for win_pe and mum package detection
    * Update test results

Signed-off-by: Jono Yang <jyang@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -112,6 +112,8 @@ full =
 # linux-only package handling
 packages =
     rpm_inspector_rpm >= 4.16.1.3; platform_system == 'Linux'
+    regipy >= 1.9.3; platform_system == 'Linux'
+    packagedcode_msitools >= 0.101.210706; platform_system == 'Linux'
 
 dev =
     pytest
