--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -78,7 +78,9 @@ install_requires =
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
     packaging > 20
-    parameter_expansion >= 0.2.0
+    # parameter_expansion >= 0.2.0
+    # use temp advanced patched release
+	parameter-expansion-patched >= 0.2.1b1
     pdfminer.six >= 20200101
     pefile >= 2020.1.1
     pkginfo >= 1.7.0
@@ -86,7 +88,7 @@ install_requires =
     plugincode >= 21.1.21
     publicsuffix2
     pyahocorasick >= 1.4.0, < 1.5
-    pygmars >= 0.7.b2
+    pygmars >= 0.7.b3
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0, < 3.0.0
